[package]
name = "explorer-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
open = "2.0.2"
time = "0.3.5"
bytesize = "1.1.0"
serde = { version = "1", features = ["derive"] }
eframe = { version = "0.15.0", features = ["persistence"] }
