[package]
name = "explorer-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
open = "2.0.2"
time = "0.3.5"
# image = "0.24.1"
bytesize = "1.1.0"
# poll-promise = "0.1.0"
# tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "1.0.133", features = ["derive"] }

file-format = "0.6.0"

eframe = { git = "https://github.com/emilk/egui", features = ["dark-light"], rev = "10f30a0" }
egui_extras = { git = "https://github.com/emilk/egui", rev = "10f30a0" }

[target.'cfg(unix)'.dependencies]
icon-loader = "0.3.6"
