[package]
name = "explorer-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
open = "5.0.1"
time = "0.3.34"
# image = "0.24.1"
bytesize = "1.3.0"
# poll-promise = "0.1.0"
# tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "1.0.196", features = ["derive"] }

file-format = "0.24.0"

eframe = "0.26.1"
egui_extras = "0.26.1"

[target.'cfg(unix)'.dependencies]
icon-loader = "0.3.6"
